# football_analysis_app

./: .gitignore  README.md  btrack.yaml  main.py  pyproject.toml  requirements.txt
assigners/: __init__.py  player2teams.py
football_utils/: annotations_utils.py  players_utils.py  transformation_utils.py  video_utils.py
train/: train_yolo.ipynb
utils/: __init__.py  annotations_utils.py  line_detection_utils.py  players_utils.py  transformation_utils.py  video_utils.py
